--- a/src/main/resources/templates/calendar/attend/myAttendList.html
+++ b/src/main/resources/templates/calendar/attend/myAttendList.html
@@ -12,10 +12,11 @@
     <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
 <div class="right-menu">
     <div class="con">
-        <h2>index</h2>
+        <h2>출석 관리</h2>
     <div class="right-con">
-
-        <div class="MyAttendance">
+        <div class="notice">
+            <h2>내 출석 내역</h2>
+        <div class="con2">
 
             <table border="1" class="listTable">
                 <tr class="tHeader">
