--- a/src/main/resources/templates/calendar/memberSchedule/memberScheduleView.html
+++ b/src/main/resources/templates/calendar/memberSchedule/memberScheduleView.html
@@ -13,11 +13,12 @@
 
 <div class="right-menu">
     <div class="con">
-        <h2>index</h2>
+        <h2>My Personal Schedule</h2>
 
   <div class="right-con">
-
-    <div class="MyAttendance">
+      <div class="notice">
+          <h2>자세히보기</h2>
+    <div class="con2">
 
       <table border="1" class="listTable">
         <tr class="tHeader">
@@ -45,6 +46,7 @@
 
   </div>
 
+</div>
 </div>
 </div>
 </div>
