--- a/src/main/resources/templates/calendar/test.html
+++ b/src/main/resources/templates/calendar/test.html
@@ -25,8 +25,8 @@
         <div class="TeamSchedule"><a href="/teamSchedule/teamSchedulePlus">팀 일정 추가</a></div>
         <div class="TeamSchedule"><a href="/teamSchedule/teamScheduleView">팀 일정 조회</a></div>
 
-        <div class="AdminSchedule"><a href="/memberSchedule/myScheduleList">어드민 개인 전체 일정 관리</a></div>
-        <div class="AdminSchedule"><a href="/teamSchedule/myScheduleList">어드민 팀 전체 일정 관리</a></div>
+        <div class="AdminSchedule"><a href="/memberSchedule/myScheduleList">어드민 개인 전체 일정 관리 (권한 admin일떄 보이기)</a></div>
+        <div class="AdminSchedule"><a href="/teamSchedule/myScheduleList">어드민 팀 전체 일정 관리 (권한 admin일떄 보이기)</a></div>
 
     </div>
 
