--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -25,16 +25,13 @@
                             <a href="#">일정관리</a>
                             <ul class="sub">
                                 <li>
-                                    <a href="#">일정추가</a>
+                                    <a th:href="@{/attend/attend}">근태 관리</a>
                                 </li>
                                 <li>
-                                    <a th:href="@{/attend}">일정조회</a>
+                                    <a th:href="@{/teamSchedule/officialList}">공식 일정</a>
                                 </li>
                                 <li>
-                                    <a href="#">일정수정</a>
-                                </li>
-                                <li>
-                                    <a href="#">일정삭제</a>
+                                    <a th:href="@{/memberSchedule/officialList}">개인 일정</a>
                                 </li>
                             </ul>
                         </li>
