--- a/src/main/resources/static/css/calendar/attend/attend.css
+++ b/src/main/resources/static/css/calendar/attend/attend.css
@@ -1,6 +1,89 @@
+@import url(/css/common/reset.css);
 @import url(/css/common/adminHeader.css);
 @import url(/css/common/leftMenu.css);
-@import url(/css/common/reset.css);
-@import url(/css/calendar/common/wraprightcon.css)
 
+#wrap{
+  width: 100%;
+  /* border: 5px solid #000000; */
+  padding-top: 50px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  /* gap: 5px; */
+}
 
+.right-menu{
+  flex: 1;
+  height: auto;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border-top: 1px solid #000000;
+  /* border: 1px solid #ffff00; */
+  padding: 30px;
+  padding-left: 330px;
+}
+
+.right-menu .con{
+  box-shadow: 5px 5px 5px 1px grey;
+}
+
+.right-menu .con h2{
+  background-color: #000000;
+  color: #ffffff;
+  padding: 5px;
+  /* border: 1px solid #000000; */
+}
+
+.right-menu .right-con{
+  /* border: 1px solid purple; */
+  height: auto;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+}
+
+.right-menu .right-con .con2{
+  padding: 10px;
+  border: 1px solid black;
+  box-sizing: border-box;
+
+}
+
+.right-menu .right-con .con2 table{
+
+  width: 100%;
+  text-align: center;
+
+}
+
+.right-menu .con .right-con .notice .con2 a{
+
+  font-size: 20px;
+
+}
+
+.right-menu .con .right-con .notice .con2 .attendButtonA{
+
+  font-size: 20px;
+  background-color: black;
+  width: 80px;
+  height: 40px;
+  color: white;
+  align-items: center;
+  text-align: center;
+  border: 1px solid gray;
+}
+
+.right-menu .con .right-con .notice .con2 .attendButtonB{
+
+  font-size: 20px;
+  background-color: black;
+  width: 80px;
+  height: 40px;
+  color: white;
+  align-items: center;
+  text-align: center;
+  border: 1px solid gray;
+}
