--- a/src/main/resources/static/css/calendar/teamSchedule/officialList.css
+++ b/src/main/resources/static/css/calendar/teamSchedule/officialList.css
@@ -48,21 +48,18 @@
   padding: 10px;
   border: 1px solid black;
   box-sizing: border-box;
-}
 
-.right-menu .right-con .con2 .paging{
-    width : inherit;
-  box-shadow: 1px 2px 5px #555555;
-  padding: 5px;
-  box-sizing: border-box;
-}
-.right-menu .right-con .con2 .paging ul{
-  display: flex;
-  justify-content: center;
 }
 
 .right-menu .right-con .con2 table{
+
   width: 100%;
   text-align: center;
+
+}
+
+.right-menu .con .right-con .notice .con2 a{
+
+  font-size: 20px;
 
 }
