--- a/src/main/resources/templates/calendar/memberSchedule/memberScheduleCheck.html
+++ b/src/main/resources/templates/calendar/memberSchedule/memberScheduleCheck.html
@@ -12,10 +12,11 @@
 
 <div class="right-menu">
     <div class="con">
-        <h2>index</h2>
+        <h2>My Personal Schedule</h2>
     <div class="right-con">
-
-        <div class="MySchedule">
+        <div class="notice">
+            <h2>나의 개인 일정</h2>
+        <div class="con2">
 
             <table border="1" class="listTable">
                 <tr class="tHeader">
@@ -56,6 +57,6 @@
 </div>
 
 </div>
-
+</div>
 </body>
 </html>
