--- a/src/main/resources/templates/calendar/memberSchedule/memberScheduleList.html
+++ b/src/main/resources/templates/calendar/memberSchedule/memberScheduleList.html
@@ -13,11 +13,12 @@
 
 <div class="right-menu">
     <div class="con">
-        <h2>index</h2>
+        <h2>My Personal Schedule</h2>
 
     <div class="right-con">
-
-        <div class="MyAttendance">
+        <div class="notice">
+            <h2>회원 개인 일정</h2>
+        <div class="con2">
 
             <table>
                 <thead>
@@ -31,7 +32,7 @@
 <!--                    </th>-->
 <!--                </tr>-->
                 <tr class="title">
-                    <th colspan="3">회원목록</th>
+<!--                    <th colspan="3">회원목록</th>-->
                 </tr>
                 <!-- 변경가능 -->
                 <tr>
@@ -102,6 +103,7 @@
 
     </div>
 
+</div>
 </div>
 </div>
 </div>
