--- a/src/main/resources/templates/calendar/teamSchedule/teamScheduleList.html
+++ b/src/main/resources/templates/calendar/teamSchedule/teamScheduleList.html
@@ -12,11 +12,12 @@
     <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
 <div class="right-menu">
     <div class="con">
-        <h2>index</h2>
+        <h2>My team Schedule</h2>
 
     <div class="right-con">
-
-        <div class="MyAttendance">
+        <div class="notice">
+            <h2>팀 일정 목록</h2>
+        <div class="con2">
 
             <table>
                 <thead>
@@ -30,7 +31,7 @@
 <!--                    </th>-->
 <!--                </tr>-->
                 <tr class="title">
-                    <th colspan="3">회원목록</th>
+<!--                    <th colspan="3">회원목록</th>-->
                 </tr>
                 <!-- 변경가능 -->
                 <tr>
@@ -51,9 +52,9 @@
                     <form th:action="@{/teamSchedule/myScheduleViewDetail}" method="post" th:object="${teamScheduleDto}">
                         <input type="text" id="scheduleId" name="scheduleId" th:value="${teamScheduleDto.scheduleId}" hidden="hidden">
                     <td th:text="${teamScheduleDto.scheduleId}"></td>
-                    <td th:text="${teamScheduleDto.scheduleBoard}"></td>
-                    <td th:text="${#temporals.format(teamScheduleDto.scheduleStart, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                    <td th:text="${#temporals.format(teamScheduleDto.scheduleEnd, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                    <td th:text="${teamScheduleDto.content}"></td>
+                    <td th:text="${#temporals.format(teamScheduleDto.start, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                    <td th:text="${#temporals.format(teamScheduleDto.end, 'yyyy-MM-dd HH:mm:ss')}"></td>
                     <td th:text="${teamScheduleDto.scheduleDone}"></td>
                     <td th:text="${teamScheduleDto.mId}"></td>
                         <td><input type="submit" value="자세히보기"></td>
