--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -67,16 +67,10 @@
                             <a href="#">동호회게시판</a>
                             <ul class="sub">
                                 <li>
-                                    <a th:href="@{/admin/boardInsert}">게시글추가</a>
+                                    <a th:href="@{/board/boardInsert}">게시글추가</a>
                                 </li>
                                 <li>
-                                    <a th:href="@{/admin/boardList}">게시글조회</a>
-                                </li>
-                                <li>
-                                    <a href="#">게시글수정</a>
-                                </li>
-                                <li>
-                                    <a href="#">게시글삭제</a>
+                                    <a th:href="@{/board/boardList}">게시글조회</a>
                                 </li>
                             </ul>
                         </li>
@@ -98,16 +92,10 @@
                             <a href="">공지사항</a>
                             <ul class="sub">
                                 <li>
-                                    <a href="#">공지사항추가</a>
+                                    <a th:href="@{/notice/noticeInsert}">공지사항추가</a>
                                 </li>
                                 <li>
-                                    <a href="#">공지사항조회</a>
-                                </li>
-                                <li>
-                                    <a href="#">공지사항수정</a>
-                                </li>
-                                <li>
-                                    <a href="#">공지사항삭제</a>
+                                    <a th:href="@{/notice/noticePage}">공지사항조회</a>
                                 </li>
                             </ul>
                         </li>
