관리자메뉴 게시판 수정

--- a/src/main/resources/static/css/common/leftMenu.css
+++ b/src/main/resources/static/css/common/leftMenu.css
@@ -66,16 +66,17 @@
   right: 0;
   top: 1px;
   color: #000000;
-
 }
 
 .left-menu .left-con .dash-board .menu>ul>li:hover::after{
   content: "▼";
   color: #000000;
+  transition: all 0.3s;
 }
 
 .left-menu .left-con .dash-board .menu>ul>li:hover ul.sub{
   display: block;
+  transition: all 0.3s;
 }
 
 .left-menu .left-con .dash-board .menu>ul>li ul.sub{
