--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -40,7 +40,7 @@
 }
 
 .wrap .login form .login-form .submit{
-  width: 52px;
+  width: 60px;
   height: 52px;
 }
 
@@ -52,6 +52,15 @@
 display: flex;
 justify-content: space-between;
 gap: 10px;
+}
+
+.wrap .login form .side-Menu{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.wrap .login form .side-Menu button{
+  width: 60px;
 }
 
 .wrap .login form .oauth{
