--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,76 @@
     <meta charset="UTF-8">
     <title>index</title>
     <link rel="stylesheet" th:href="@{/css/index.css}">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 풀캘린더 -->
+    <script th:src="@{/js/indexCallender.js}" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.4/index.global.min.js'></script>
 
+      <!-- 캘린더 css -->
+       <style>
+        #content {
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          margin: 0 auto
+        }
+    
+        h1.title {
+          display: none;
+          /* text-align: center;
+          background-color: #3788d8;
+          color: #ffffff;
+          padding: 10px 0; */
+        }
+    
+        #calendar {
+          width: 100%;
+          height: 100%;
+        }
+
+        main{
+            width: 100%;
+            height: 100%;
+        }
+
+        main .content{
+            width: 100%;
+            height: 100%;
+        }
+
+        table.fc-col-header {
+            width: 100% !important;
+        }
+
+        table.fc-scrollgrid-sync-table {
+            width: 100% !important;
+            height: 100% !important;
+        }
+
+        .fc-view-harness.fc-view-harness-active{
+            height: 405px !important;
+        }
+
+        .fc-toolbar-chunk:nth-child(3){
+            display: none;
+        }
+
+        .fc-scroller{
+            overflow: unset !important;
+        }
+
+        .fc-scroller.fc-scroller-liquid-absolute{
+            overflow: unset !important;
+        }
+
+        .fc-daygrid-body.fc-daygrid-body-unbalanced {
+            width: 100% !important;
+        }
+
+      </style>
+    
 </head>
 
 <body>
@@ -21,7 +90,19 @@
                         <div class="team-schedule">
                             <h2>공식일정</h2>
                             <div class="con2">
-                                
+                                <!-- 풀캘린더 -->
+                                <main>
+                                    <div id="content">
+                                      <h1 class="title">
+                                        Team ScheduleCalendar
+                                      </h1>
+                                      <div class="img">
+                                      </div>
+                                      <div id='calendar-container'>
+                                        <div id='calendar'></div>
+                                      </div>
+                                    </div>
+                                  </main>
                             </div>
                             
                         </div>
@@ -29,7 +110,7 @@
                         <div class="board">
                             <div class="notice">
                                 <h2>공지사항</h2>
-                                <a th:href="@{notice/noticeList}">
+                                <a th:href="@{/notice/noticePage}">
                                     <div class="con2">
                                         <th:block th:if="${noticeList.size() == 0}">
                                             <h1 style="color: red;">작성된 게시물이 없습니다!</h1>
@@ -70,6 +151,7 @@
                                                     <th>No</th>
                                                     <th>제목</th>
                                                     <th>내용</th>
+                                                    <th>작성자</th>
                                                     <th>조회수</th>
                                                     <th>작성일</th>
                                                 </tr>
@@ -78,6 +160,7 @@
                                                         <td th:text="${board.boardId}"></td>
                                                         <td th:text="${board.boardTitle}"></td>
                                                         <td th:text="${board.boardContent}"></td>
+                                                        <td th:text="${board.mName}"></td>
                                                         <td th:text="${board.boardHit}"></td>
                                                         <td th:text="${#temporals.format(board.boardCreate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                                                     </tr>
