--- a/src/main/resources/templates/member/memberDetail.html
+++ b/src/main/resources/templates/member/memberDetail.html
@@ -76,7 +76,7 @@
                                             <span class="detail" th:text="${memberDto.mIntro}"></span>
                                         </li>
                                         <li>
-                                            <button><a th:href="@{|/member/update/${memberDto.mId}|}">회원수정</a></button>
+                                            <button><a th:href="@{/member/update}">회원수정</a></button>
                                             <button><a th:href="@{/member/delete}">회원탈퇴</a></button>
                                         </li>
                                     </ul>
