--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
-    <!-- <script th:src="@{/js/login.js}" defer></script> -->
     <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
@@ -22,11 +21,10 @@
                             <input type="password" class="mPw" name="mPw" placeholder="비밀번호를 입력해주세요">
                         </li>
                     </ul>
-                    <input class="submit" type="submit" value="로그인" onclick="loginCheck">
+                    <input class="submit" type="submit" value="로그인">
                 </div>
                 <div class="side-Menu">
                     <button><a th:href="@{/join}">회원가입</a></button>
-                    <button><a th:href="@{#}">이메일찾기</a></button>
                 </div>
                 <div class="oauth">
                     <a th:href="@{/oauth2/authorization/google}"><img th:src=@{/img/google.png} alt="google" class="google-img" style="border-radius: 20px;"></a>
